Fixes #1001. In the decafbland style, long nicknames will now be truncated instead of wrapping to the next line.

--- a/Resources/Styles/DecafBland.colloquyStyle/Contents/Resources/main.css
+++ b/Resources/Styles/DecafBland.colloquyStyle/Contents/Resources/main.css
@@ -68,6 +68,7 @@ a.member:hover   { text-decoration: underline; }
 
 .envelope > .member {
   overflow: hidden;
+  white-space: nowrap;
   display: block;
   width: 15ex;
   float: left;
